Finish basic styling for nav and create plate components

--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,9 @@ body {
 nav {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
     padding: 30px 0;
+    margin: 0 auto;
 }
 
 .logo, .nav-buttons {
