--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ nav {
     justify-content: space-evenly;
     padding: 30px 0;
     margin: 0 auto;
+    background-color: rgba(0, 139, 139, .25);
 }
 
 .logo, .nav-buttons {
@@ -50,7 +51,7 @@ h2 {
 aside {
     max-width: 600px;
     margin: 0 30px;
-    border: 1px solid lightgray;
+    border: 1px solid rgba(0, 139, 139, .25);
     border-radius: 20px;
     padding: 30px;
 }
