--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
-* {
+/* * {
     border: 1px solid gold;
-}
+} */
 
 body {
   margin: 0;
@@ -38,7 +38,7 @@ nav {
     justify-content: center;
 }
 
-h2 {
+h2, h3 {
     font-family: 'Cutive Mono', sans-serif;
     font-size: 2.5em;
     font-weight: bold;
@@ -88,4 +88,12 @@ img {
 svg {
     display: block;
     margin: 75px auto 0 auto;
+}
+
+.saved-plates {
+    width: 500px;
+    margin: 75px auto;
+    border: 1px solid rgba(0, 139, 139, .25);
+    border-radius: 20px;
+    padding: 15px 30px;
 }
