--- a/src/index.css
+++ b/src/index.css
@@ -108,3 +108,19 @@ svg {
     border-radius: 20px;
     padding: 15px 30px;
 }
+
+.saved-plates > h3 {
+    text-align: center;
+}
+
+.saved-plates > div > button {
+    margin: 0 7px;
+}
+
+.saved-plates > div {
+    margin: 20px 0 30px 0;
+}
+
+b {
+    color: rgba(0, 139, 139, 1);
+}
