--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,16 @@ nav {
     background-color: rgba(0, 139, 139, .25);
 }
 
+.logo-container {
+    display: flex;
+    flex-direction: row;
+}
+
+.logo-container > img {
+    max-height: 20px;
+    max-width: 50px;
+}
+
 .logo, .nav-buttons {
     margin: auto 0;
 }
@@ -75,7 +85,7 @@ aside > h2 {
     margin: 15px auto 0 auto;
 }
 
-img {
+.example-plate {
     margin: 30px auto 0 auto;
     padding-bottom: 20px;
 }
