--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,22 @@ nav {
     background-color: rgba(0, 139, 139, .25);
 }
 
+button {
+    background-color: tomato !important;
+    border: none !important;
+    box-shadow: none !important;
+}
+
+.logo > a {
+    color: black;
+    text-decoration: underline;
+    text-decoration-color: tomato;
+}
+
+.logo > a:hover {
+    text-decoration: none;
+}
+
 .logo-container {
     display: flex;
     flex-direction: row;
@@ -52,6 +68,8 @@ h2, h3 {
     font-family: 'Cutive Mono', sans-serif;
     font-size: 2.5em;
     font-weight: bold;
+    text-decoration: underline;
+    text-decoration-color: tomato;
 }
 
 .create-header {
@@ -129,6 +147,15 @@ svg {
 
 .saved-plates > div {
     margin: 20px 0 30px 0;
+}
+
+h5 {
+    color: rgba(0, 139, 139, 1);
+}
+
+h5:hover {
+    text-decoration: underline;
+    text-decoration-color: tomato;
 }
 
 b {
