--- a/src/index.css
+++ b/src/index.css
@@ -129,8 +129,8 @@ svg {
     margin: 0 auto;
 }
 
-.saved-plates {
-    width: 500px;
+.saved-plates, .combo-results {
+    width: 650px;
     margin: 75px auto;
     border: 1px solid rgba(0, 139, 139, .25);
     border-radius: 20px;
@@ -160,4 +160,8 @@ h5:hover {
 
 b {
     color: rgba(0, 139, 139, 1);
+}
+
+.combo-results > div > button {
+    margin: 0 7px;
 }
