--- a/src/index.css
+++ b/src/index.css
@@ -149,6 +149,10 @@ svg {
     margin: 20px 0 30px 0;
 }
 
+.saved-plates > div > h3 {
+    margin-bottom: 20px;
+}
+
 h5 {
     color: rgba(0, 139, 139, 1);
 }
@@ -164,4 +168,12 @@ b {
 
 .combo-results > div > button {
     margin: 0 7px;
+}
+
+.combo-results > div > h3 {
+    margin-bottom: 20px;
+}
+
+.combo-results > div {
+    margin: 20px 0 30px 0;
 }
