--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
-* {
+/* * {
     border: 1px solid gold;
-}
+} */
 
 body {
   margin: 0;
@@ -126,9 +126,8 @@ aside > h2 {
     margin: 0 auto;
 }
 
-.grid2 {
-    display: block;
-    margin: 0 auto;
+#grid2 {
+    height: 600px;
 }
 
 .saved-plates, .combo-results {
