--- a/src/index.css
+++ b/src/index.css
@@ -162,10 +162,10 @@ h5 {
     color: rgba(0, 139, 139, 1);
 }
 
-h5:hover {
+/* h5:hover {
     text-decoration: underline;
     text-decoration-color: tomato;
-}
+} */
 
 b {
     color: tomato;
